// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scriptrunner logic Network errors should break connection 1`] = `[WebsocketConnectionError: WebsocketConnectionError]`;

exports[`Scriptrunner logic Non 9000 status that cause a ws close, should be mapped 1`] = `[TransportStatusError: Ledger device: USER_REFUSED_ON_DEVICE (0x5501)]`;

exports[`Scriptrunner logic Once in a bulk exchange, no more message coming from the HSM should be handeled 1`] = `
[
  {
    "type": "opened",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        1,
      ],
      "type": "Buffer",
    },
    "nonce": 1,
    "type": "exchange-before",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        1,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 1,
    "status": 36864,
    "type": "exchange",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        2,
      ],
      "type": "Buffer",
    },
    "nonce": 2,
    "type": "exchange-before",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        2,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 2,
    "status": 36864,
    "type": "exchange",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        3,
      ],
      "type": "Buffer",
    },
    "nonce": 3,
    "type": "exchange-before",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        3,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 3,
    "status": 36864,
    "type": "exchange",
  },
  {
    "index": 0,
    "progress": 0,
    "total": 4,
    "type": "bulk-progress",
  },
  {
    "index": 1,
    "progress": 0.25,
    "total": 4,
    "type": "bulk-progress",
  },
  {
    "index": 2,
    "progress": 0.5,
    "total": 4,
    "type": "bulk-progress",
  },
  {
    "index": 3,
    "progress": 0.75,
    "total": 4,
    "type": "bulk-progress",
  },
  {
    "index": 4,
    "progress": 1,
    "total": 4,
    "type": "bulk-progress",
  },
]
`;

exports[`Scriptrunner logic Regardless of the error, if we are in bulk, it can't recover 1`] = `[TransportStatusError: Ledger device: USER_REFUSED_ON_DEVICE (0x5501)]`;

exports[`Scriptrunner logic Should break runner connection if device is locked 1`] = `[LockedDeviceError: Ledger device: Locked device (0x5515)]`;

exports[`Scriptrunner logic Should continue exchange if HSM handles the error 1`] = `
[
  {
    "type": "opened",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        1,
      ],
      "type": "Buffer",
    },
    "nonce": 1,
    "type": "exchange-before",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        1,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 1,
    "status": 26159,
    "type": "exchange",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        2,
      ],
      "type": "Buffer",
    },
    "nonce": 2,
    "type": "exchange-before",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        2,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 2,
    "status": 36864,
    "type": "exchange",
  },
]
`;

exports[`Scriptrunner logic Should emit events for secure channel successfully 1`] = `
[
  {
    "type": "opened",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        1,
      ],
      "type": "Buffer",
    },
    "nonce": 1,
    "type": "exchange-before",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        1,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 1,
    "status": 36864,
    "type": "exchange",
  },
  {
    "apdu": {
      "data": [
        224,
        81,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "nonce": 2,
    "type": "exchange-before",
  },
  {
    "type": "device-permission-requested",
  },
  {
    "type": "device-permission-granted",
  },
  {
    "apdu": {
      "data": [
        224,
        81,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 2,
    "status": 36864,
    "type": "exchange",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        2,
      ],
      "type": "Buffer",
    },
    "nonce": 3,
    "type": "exchange-before",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        2,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 3,
    "status": 36864,
    "type": "exchange",
  },
]
`;

exports[`Scriptrunner logic Should map rejected allow my ledger 1`] = `[UserRefusedAllowManager: UserRefusedAllowManager]`;

exports[`Scriptrunner logic Should pass without errors 1`] = `
[
  {
    "type": "opened",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        1,
      ],
      "type": "Buffer",
    },
    "nonce": 1,
    "type": "exchange-before",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        1,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 1,
    "status": 36864,
    "type": "exchange",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        2,
      ],
      "type": "Buffer",
    },
    "nonce": 2,
    "type": "exchange-before",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        2,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 2,
    "status": 36864,
    "type": "exchange",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        3,
      ],
      "type": "Buffer",
    },
    "nonce": 3,
    "type": "exchange-before",
  },
  {
    "apdu": {
      "data": [
        0,
        0,
        0,
        0,
        3,
      ],
      "type": "Buffer",
    },
    "data": {
      "data": [],
      "type": "Buffer",
    },
    "nonce": 3,
    "status": 36864,
    "type": "exchange",
  },
  {
    "index": 0,
    "progress": 0,
    "total": 4,
    "type": "bulk-progress",
  },
  {
    "index": 1,
    "progress": 0.25,
    "total": 4,
    "type": "bulk-progress",
  },
  {
    "index": 2,
    "progress": 0.5,
    "total": 4,
    "type": "bulk-progress",
  },
  {
    "index": 3,
    "progress": 0.75,
    "total": 4,
    "type": "bulk-progress",
  },
  {
    "index": 4,
    "progress": 1,
    "total": 4,
    "type": "bulk-progress",
  },
]
`;
